# frontend_api

./: ._.git  .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  Taskfile.yml  Taskfile.yml.old  frontend-app.yml  frontend_app.py  pyproject.toml
.github/workflows/: build-and-deploy.yaml  image-build-on-push.yml  security-remediation-agent.yml
argocd/: frontend-app.yml
deploy/: kustomization.yaml
deploy/argocd/: application.yaml  project.yaml
deploy/kubevela/: app.yaml  kustomization.yml  trait-httproute.yaml
kube/kustomize/base/: configmap.yaml  deployment.yaml  hpa.yml  httproute.yaml  kustomization.yaml  service.yaml
scripts/: security_remediation_agent.py
src/: frontend_app.py
static/: styles.css
templates/: base.html  index.html  phrase.html
tests/: conftest.py  test_frontend_app.py  test_security_remediation_agent.py
