[tool.poetry]
name = "frontend-app"
version = "0.1.0"
description = "Python Flask front end to call backend api and display randomly returned phrase from api."
authors = ["Aaron Hatcher"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
prometheus-client = "^0.21.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
