[tool.poetry]
name = "frontend-app"
version = "0.1.0"
description = "Python Flask front end to call backend api and display randomly returned phrase from api."
authors = ["Aaron Hatcher"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
prometheus-client = "^0.21.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
ruff = "^0.13.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
